Unused imports cleanup